<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorActivityBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rideOptions">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rider_info"
                        android:textColor="@color/colorPrimaryExtraDark"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"/>
                    <RelativeLayout
                        android:id="@+id/view_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_alignParentBottom="true"
                        >
                        <com.taxiappclone.common.view.CircleImageView
                            android:id="@+id/img_rider"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/user"
                            app:civ_border_width="0.5dip"
                            android:layout_margin="15dp"
                            app:civ_border_color="@color/color_gray_light"
                            android:layout_centerVertical="true"/>
                        <TextView
                            android:id="@+id/tv_rider_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rider Name"
                            android:textSize="18sp"
                            android:textColor="@color/text_color_dark"
                            android:layout_marginTop="15dp"
                            android:layout_alignEnd="@+id/view1"
                            android:layout_toEndOf="@+id/img_rider"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_blue_rounded"
                            android:paddingLeft="7dp"
                            android:paddingRight="3dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:layout_toEndOf="@+id/img_rider"
                            android:layout_below="@+id/tv_rider_name"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4.5"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>
                            <ImageView
                                android:layout_width="14dp"
                                android:layout_height="14dp"
                                android:layout_marginLeft="2dp"
                                app:srcCompat="@drawable/ic_star_white_24dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_up"
                        android:textColor="@color/colorPrimaryExtraDark"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/ic_place_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/colorPrimaryExtraDark"/>
                        <TextView
                            android:id="@+id/tv_pickup_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="15dp"
                            android:textColor="@color/text_color_normal"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drop_off"
                        android:textColor="@color/colorPrimaryExtraDark"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/ic_navigation_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/colorPrimaryExtraDark"/>
                        <TextView
                            android:id="@+id/tv_dropoff_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="15dp"
                            android:textColor="@color/text_color_normal"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="PAYMENT INFO"
                        android:textColor="@color/colorPrimaryExtraDark"
                        android:textSize="16sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/payment_type"
                                android:textSize="16sp"
                                android:textColor="@color/text_color_normal"/>
                            <TextView
                                android:id="@+id/tv_payment_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_color_dark"
                                android:gravity="end"/>
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorDivider"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/estimated_fare"
                                android:textSize="16sp"
                                android:textColor="@color/text_color_normal"/>
                            <TextView
                                android:id="@+id/tv_amount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_color_dark"
                                android:gravity="end"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rideOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/view_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"
            android:padding="15dp"
            android:background="?selectableItemBackground"
            >
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_cancel_red_24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_ride"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/text_color_dark"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>